<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/text_blue">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="10dp"
            android:src="@drawable/fin_edge_login_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_btm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/rounded_top_white_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_forgot_password">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_28sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/reset_password"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/_26sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/welcome_back_you_have_been_missed"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_new_password"
                style="@style/TextInputLayoutCustom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/enter_new_password"
                app:hintTextColor="@color/text_blue"
                app:layout_constraintEnd_toEndOf="@id/tv_description"
                app:layout_constraintStart_toStartOf="@id/tv_description"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                app:passwordToggleEnabled="true"
                app:placeholderText="Enter password"
                app:placeholderTextColor="#999999">

                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/text_blue" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_re_new_password"
                style="@style/TextInputLayoutCustom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/re_enter_new_password"
                app:hintTextColor="@color/text_blue"
                app:layout_constraintEnd_toEndOf="@id/til_new_password"
                app:layout_constraintStart_toStartOf="@id/til_new_password"
                app:layout_constraintTop_toBottomOf="@id/til_new_password"
                app:passwordToggleEnabled="true"
                app:placeholderText="Enter password"
                app:placeholderTextColor="#999999">

                <EditText
                    android:id="@+id/et_re_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/text_blue" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_rest_password"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:background="@drawable/button_solid"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>