<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical"
    android:paddingHorizontal="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_background"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <ImageView
            android:id="@+id/iv_month_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingHorizontal="15dp"
            android:src="@drawable/left_arrow_head_icon" />

        <TextView
            android:id="@+id/tv_month_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="July 2023"
            android:textColor="#030303"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_month_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingHorizontal="15dp"
            android:src="@drawable/right_arrow_head_icon" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/home_card_background_blanck"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp">

                <ImageView
                    android:id="@+id/iv_income"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/income_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/iv_income"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/income"
                        android:textColor="@color/text_blue"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="₹ 0.00"
                        android:textColor="@color/text_blue"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/home_card_background_blanck"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp">

                <ImageView
                    android:id="@+id/iv_expense"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/expense_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/iv_expense"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/expense"
                        android:textColor="@color/text_blue"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_expenseAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="₹ 0.00"
                        android:textColor="@color/text_blue"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/home_card_background_blanck"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp">

                <ImageView
                    android:id="@+id/iv_balance"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/balance_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/iv_balance"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Balance"
                        android:textColor="@color/text_blue"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="₹ 0.00"
                        android:textColor="@color/text_blue"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/home_card_background_blanck"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp">

                <ImageView
                    android:id="@+id/iv_avg_daily_expense"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/daily_expense_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/iv_avg_daily_expense"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Average Daily Ex."
                        android:textColor="@color/text_blue"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_avg_daily_expense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="₹ 0.00"
                        android:textColor="@color/text_blue"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_white_background"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:paddingHorizontal="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/transactions"
                android:textColor="@color/category_title_dark_grey"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_filter_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/filter_icon" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="10dp"
            android:background="@color/text_transaction_item_light_grey" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recent_transactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/layout_transaction_list_item" />

    </LinearLayout>

</LinearLayout>